--- a/index.html
+++ b/index.html
@@ -4,9 +4,32 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>スクロールアニメーション</title>
   </head>
   <body>
+    <main>
+      <h1>PortFolio</h1>
+      <section>
+        <h2>突き詰める最高のスキルを</h2>
+      </section>
+
+      <section>
+        <h2>My Project</h2>
+        <p>私の作った作品です</p>
+      </section>
+      <section>
+        <h2>My Skills</h2>
+        <p>HTML/CSS/JavaScrippt</p>
+      </section>
+      <section>
+        <h2>Engineer</h2>
+        <p>知識への好奇心</p>
+      </section>
+      <section>
+        <h2>Contact</h2>
+        <p>お問い合わせ</p>
+      </section>
+    </main>
     <canvas class="mycanvas"></canvas>
     <script type="module" src="/main.js"></script>
   </body>
